<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/size10dp"
            android:layout_marginBottom="@dimen/size10dp"
            android:background="@color/aaa">

            <EditText
                android:id="@+id/phone_notice_incoming_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="zhou"
                android:hint="联系人姓名"/>
            <EditText
                android:id="@+id/phone_notice_incoming_phone_number_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="15812348888"
                android:inputType="phone"
                android:hint="电话号码"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="noticeIncomingCall"
                android:text="@string/phone_notice_incoming_call"/>
        </LinearLayout>



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="setStopInComingCall"
            android:text="@string/phone_notice_calling_stop"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/size10dp"
            android:layout_marginBottom="@dimen/size10dp"
            android:background="@color/aaa">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/phone_notice_new_msg_type_sms_rb"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/phone_notice_new_msg_type_sms_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="短信"/>
                <RadioButton
                    android:id="@+id/phone_notice_new_msg_type_email_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="邮件"/>
                <RadioButton
                    android:id="@+id/phone_notice_new_msg_type_wx_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="微信"/>


            </RadioGroup>

            <EditText
                android:id="@+id/phone_notice_new_msg_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="zhou"
                android:hint="姓名"/>

            <EditText
                android:id="@+id/phone_notice_new_msg_number_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="243147030"
                android:inputType="phone"
                android:hint="号码"/>
            <EditText
                android:id="@+id/phone_notice_new_msg_content_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="你有一个微信红包"
                android:hint="信息内容"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="noticeNewMsg"
                android:text="@string/phone_notice_new_message"/>
        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="noticeUnreadMsg"
            android:enabled="false"
            android:text="@string/phone_notice_unread_message"/>


    </LinearLayout>

</ScrollView>

